# PyPI-AI

./: .gitignore  FINAL_SUBMISSION.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dashboard/: app.js  index.html  styles.css
dashboard/data/: latest-report.json  project-status.json
docker/pypi-ai-sandbox/: Dockerfile  entrypoint.py
docs/: AI_MODEL_SKILL.md  DASHBOARD.md  DEFENSE_GUIDE.md  ONE_YEAR_PROGRESS_REPORT.md  RUNTIME_DEBUG_REPORT.md
docs/assets/final-submission/: activity-scan-risk.mmd  provider-decision.mmd  review-branch-strategy.mmd  sequence-scan-report.mmd  use-case-diagram.mmd
docs/final/: final-review-report.md
docs/final/reports/: env-network-review.html  env-network-review.json
docs/final/tool-screenshots/: 01-welcome.html  01-welcome.txt  02-scan-evidence.html  02-scan-evidence.txt  03-theme-preview.html  03-theme-preview.txt  04-install-dry-run.html  04-install-dry-run.txt  05-doctor-version.html  05-doctor-version.txt  README.md
docs/research/: agentic-chase-continuation.md  chase-comparison.md  sandbox-threat-model.md
scripts/: demo_setup.sh  setup.ps1  setup.sh
skills/pypi-ai-model/: SKILL.md
src/pypi_ai/: __init__.py  agentic.py  ai.py  analyzer.py  cli.py  config.py  constants.py  installer.py  intelligence.py  metadata.py  models.py  reports.py  risk.py  rules.py  scanner.py  venv.py
tests/: test_agentic_chase.py  test_ai.py  test_cli.py  test_final_qa_matrix.py  test_install.py  test_intelligence.py  test_reports.py  test_risk.py  test_scanner.py  test_skill_file.py  test_venv_scan.py
(+38 files in other folders)
