[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pypi-ai"
version = "0.1.0"
description = "Evidence-grounded static scanner for suspicious Python packages."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "VASANTH ADITHYA", email = "vasanthfeb13@gmail.com" },
  { name = "SAI GEETHIKA" },
]
dependencies = [
  "typer>=0.12.5",
  "rich>=13.9.4",
  "rapidfuzz>=3.10.1",
  "reportlab>=4.2.5",
]

[project.scripts]
pypi-ai = "pypi_ai.cli:app"

[dependency-groups]
dev = [
  "mypy>=1.13.0",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pypi_ai"]

[tool.pytest.ini_options]
addopts = "-q --cov=pypi_ai --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["pypi_ai"]

[[tool.mypy.overrides]]
module = ["reportlab.*"]
ignore_missing_imports = true
